--- a/AvansAstrandTest/Server/ServerProgram.csproj
+++ b/AvansAstrandTest/Server/ServerProgram.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Communication\Server.cs" />
     <Compile Include="Communication\ServerClient.cs" />
+    <Compile Include="Data\DataPoint.cs" />
     <Compile Include="Data\Encrypter.cs" />
     <Compile Include="Data\Gender.cs" />
     <Compile Include="Data\Patient.cs" />
