--- a/AvansAstrandTest/Ergometer/Ergometer.csproj
+++ b/AvansAstrandTest/Ergometer/Ergometer.csproj
@@ -35,6 +35,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,14 +45,51 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActiveWorkoutView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ActiveWorkoutView.Designer.cs">
+      <DependentUpon>ActiveWorkoutView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ClientView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ClientView.Designer.cs">
+      <DependentUpon>ClientView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Communication\ErgoClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TestView.Designer.cs">
+      <DependentUpon>TestView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="WarmingUpView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="WarmingUpView.Designer.cs">
+      <DependentUpon>WarmingUpView.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="ActiveWorkoutView.resx">
+      <DependentUpon>ActiveWorkoutView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ClientView.resx">
+      <DependentUpon>ClientView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestView.resx">
+      <DependentUpon>TestView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WarmingUpView.resx">
+      <DependentUpon>WarmingUpView.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Server\ServerProgram.csproj">
       <Project>{A3441579-FDB4-490A-AE54-5DD5B9C9E3BB}</Project>
