--- a/AvansAstrandTest/Ergometer/Ergometer.csproj
+++ b/AvansAstrandTest/Ergometer/Ergometer.csproj
@@ -58,8 +58,15 @@
       <DependentUpon>ClientView.cs</DependentUpon>
     </Compile>
     <Compile Include="Communication\ErgoClient.cs" />
+    <Compile Include="CoolingDownView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CoolingDownView.Designer.cs">
+      <DependentUpon>CoolingDownView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StateCallback.cs" />
     <Compile Include="TestView.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -82,6 +89,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ClientView.resx">
       <DependentUpon>ClientView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CoolingDownView.resx">
+      <DependentUpon>CoolingDownView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TestView.resx">
       <DependentUpon>TestView.cs</DependentUpon>
