--- a/AvansAstrandTest/Server/ServerProgram.csproj
+++ b/AvansAstrandTest/Server/ServerProgram.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Data\Tag.cs" />
     <Compile Include="Data\TagDecoder.cs" />
     <Compile Include="Data\Test.cs" />
+    <Compile Include="Data\TestLogics.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
