--- a/AvansAstrandTest/Ergometer/Ergometer.csproj
+++ b/AvansAstrandTest/Ergometer/Ergometer.csproj
@@ -72,6 +72,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActiveWorkoutView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ActiveWorkoutView.Designer.cs">
+      <DependentUpon>ActiveWorkoutView.cs</DependentUpon>
+    </Compile>
     <Compile Include="ApplicationSettings.cs" />
     <Compile Include="ErgoClient\BluetoothLowEnergy\BLEConnect\BLEConnect.cs" />
     <Compile Include="ErgoClient\BluetoothLowEnergy\BLEData\BLEData.cs" />
@@ -91,16 +97,39 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="LogInView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LogInView.Designer.cs">
+      <DependentUpon>LogInView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MessageCallback.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StateCallback.cs" />
+    <Compile Include="TestStateUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TestStateUserControl.Designer.cs">
+      <DependentUpon>TestStateUserControl.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="ActiveWorkoutView.resx">
+      <DependentUpon>ActiveWorkoutView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LogInView.resx">
+      <DependentUpon>LogInView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestStateUserControl.resx">
+      <DependentUpon>TestStateUserControl.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
