--- a/AvansAstrandTest/Specialist/Specialist.csproj
+++ b/AvansAstrandTest/Specialist/Specialist.csproj
@@ -66,13 +66,14 @@
     <Compile Include="DokterView.Designer.cs">
       <DependentUpon>DokterView.cs</DependentUpon>
     </Compile>
+    <Compile Include="PatientReceivedCallback.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SessionView.cs">
-      <SubType>UserControl</SubType>
+    <Compile Include="SessionViewForm.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SessionView.Designer.cs">
-      <DependentUpon>SessionView.cs</DependentUpon>
+    <Compile Include="SessionViewForm.Designer.cs">
+      <DependentUpon>SessionViewForm.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -83,8 +84,8 @@
     <EmbeddedResource Include="DokterView.resx">
       <DependentUpon>DokterView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="SessionView.resx">
-      <DependentUpon>SessionView.cs</DependentUpon>
+    <EmbeddedResource Include="SessionViewForm.resx">
+      <DependentUpon>SessionViewForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
